@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.785 2011-09-07 21:54:23 fyurisich Exp $
+ * $Id: ChangeLog,v 1.786 2011-09-11 02:30:55 fyurisich Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
@@ -7,6 +7,10 @@
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
 
+
+2011-09-10 23:30:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
+   * c_activex.c
+     ! Fixed some C Compiler warnings.
 
 2011-09-07 19:00:00 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/winprint.prg
